# ai-agents

./: .env.example  .gitignore  Dockerfile  LICENSE  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 8cd5e5b92d22_create_user_table.py
src/: main.py
src/agents/: __init__.py  agents.py  chatbot.py  llama_guard.py  react_agent.py  research_assistant.py  tools.py
src/agents/admission_agent/: __init__.py  admission_agent.py  data_loader.py  vector_store.py
src/agents/bg_task_agent/: bg_task_agent.py  task.py
src/api/: deps.py
src/api/v1/: __init__.py  admission.py  agent.py  auth.py
src/core/: __init__.py  llm.py  logging.py  security.py  settings.py
src/database/: __init__.py  connection.py
src/database/models/: __init__.py  base.py  user.py
src/schema/: __init__.py  auth.py  models.py  schema.py
src/scripts/: entrypoint.sh
src/service/: __init__.py  agent.py  auth.py  utils.py
